--- a/cfn.pipeline.yaml
+++ b/cfn.pipeline.yaml
@@ -42,14 +42,14 @@ Resources:
   CodeBuild:
     Type: AWS::CodeBuild::Project
     Properties:
-      Name: "lambda-codebuild"
+      Name: "cfn-ci-to-lambda-cb"
       # artifacts are settings for files outputted after running this codebuild e.g. an executable file
       Artifacts:
         Type: CODEPIPELINE
       # environment specified the compute environment for the container
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/amazonlinux2-x86_64-standard:2.0
+        Image: aws/codebuild/standard:5.0
         ImagePullCredentialsType: CODEBUILD
         Type: LINUX_CONTAINER
         PrivilegedMode: true
@@ -76,7 +76,7 @@ Resources:
   Codepipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
-      Name: "lambda-pipeline"
+      Name: "cfn-ci-to-lambda-cp"
       ArtifactStore: # specifies the s3 bucket where artifacts (files) from this pipeline should be stored
         Type: S3
         Location: !Ref S3ArtifactStore
@@ -128,7 +128,7 @@ Resources:
                 Provider: CloudFormation
                 Version: '1'
               Configuration:
-                StackName: !Sub "lambda-stack"
+                StackName: !Sub "cfn-ci-to-lambda-stack"
                 ActionMode: REPLACE_ON_FAILURE
                 Capabilities: CAPABILITY_IAM,CAPABILITY_NAMED_IAM
                 RoleArn: !Ref CloudformationRoleArn
