--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,17 +1,18 @@
 version: 0.2
-
 phases:
-  build:
-    commands:
-      - echo "Changing into source directory $CODEBUILD_SRC_DIR"
-      - cd $CODEBUILD_SRC_DIR
-      # - echo "Installing dependencies into src file"
-      # - pip install -t /src -r requirements.txt
-      - echo "Packaging cloudformation template"
-      - aws cloudformation package --template-file cfn.yaml --s3-bucket $S3_BUCKET \
-                --s3-prefix $S3_BUILDS_PREFIX --output-template-file $TEMPLATE_FILE_NAME
+ install:
+  runtime-versions:
+   python: 3.9
+ build:
+  commands:
+   - sam build
+   - export BUCKET=testapi-icici
+   - export TEMPLATE=template.yml
+   - export OUTPUT_TEMPLATE=output_template_stag.yml
+   - sam package --template-file $TEMPLATE --s3-bucket $BUCKET --output-template-file $OUTPUT_TEMPLATE
 artifacts:
-  files:
-    - '$TEMPLATE_FILE_NAME'
-    - '*config.json'
-  discard-paths: yes
+ type: zip
+ files:
+  - $TEMPLATE
+  - $OUTPUT_TEMPLATE
+  
