--- a/cfn.yaml
+++ b/cfn.yaml
@@ -1,47 +1,11 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'This template deploys a basic stuff to get the aws account set up'
-Parameters:
-  S3ArtifactStore:
-    Type: String
-    Description: Name of S3 bucket
-
+Transform: AWS::Serverless-2016-10-31
+Description: Lambda Function To Invoke Purge Data Function
 Resources:
-
-  # Common Lambda Role
-  LambdaRole:
-    Type: AWS::IAM::Role
-    Properties:
-      RoleName: "cfn-to-ci-lambda-role"
-      Description: "Role assigned to lambdas"
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - lambda.amazonaws.com
-            Action:
-              - 'sts:AssumeRole'
-      Policies:
-        - PolicyName: root
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  - s3:*
-                Resource: '*'
-
-  # Lambda
-  Lambda:
-    Type: AWS::Lambda::Function
-    Properties:
-      FunctionName: "cfn-to-ci-lambda"
-      Description: "Lambda example"
-      Code: ./src/
-      Handler: lambda.handler
-      Runtime: python3.9
-      Timeout: 900
-      Role: !GetAtt LambdaRole.Arn
-      PackageType: Zip
-      MemorySize: 128
+ SampleFunction:
+  Type: AWS::Serverless::Function
+  Properties:
+   Handler: main.lambda_handler
+   Runtime: python3.9
+   FunctionName: abhinandan_data_purge
+   CodeUri: .
