--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,8 +6,8 @@ phases:
  build:
   commands:
    - sam build
-   - export BUCKET=testapi-icici
-   - export TEMPLATE=template.yml
+   # - export BUCKET=testapi-icici
+   - export TEMPLATE=cfn.yml
    - export OUTPUT_TEMPLATE=output_template_stag.yml
    - sam package --template-file $TEMPLATE --s3-bucket $BUCKET --output-template-file $OUTPUT_TEMPLATE
 artifacts:
