--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,7 +6,7 @@ phases:
  build:
   commands:
    - sam build
-   # - export BUCKET=testapi-icici
+   - export BUCKET=abhinandan-ci-lambda-001
    - export TEMPLATE=cfn.yml
    - export OUTPUT_TEMPLATE=output_template_stag.yml
    - sam package --template-file $TEMPLATE --s3-bucket $BUCKET --output-template-file $OUTPUT_TEMPLATE
