--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,13 +8,12 @@ phases:
    - sam build
    - export BUCKET=abhinandan-ci-lambda-001
    - export TEMPLATE=template.yml
-   - export OUTPUT_TEMPLATE=output_template_stag.yml
-   - sam package --template-file $TEMPLATE --s3-bucket $BUCKET --output-template-file $OUTPUT_TEMPLATE
+   - export TEMPLATE_FILE_NAMEoutput_template_stag.yml
+   - sam package --template-file $TEMPLATE --s3-bucket $BUCKET --output-template-file $TEMPLATE_FILE_NAME
 artifacts:
  type: zip
  files:
   - $TEMPLATE
-  - $OUTPUT_TEMPLATE
-  - '*config.json'
-  discard-paths: yes
+  - $TEMPLATE_FILE_NAME
+ 
   
