--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,17 +1,18 @@
 version: 0.2
+
 phases:
- install:
-  runtime-versions:
-   python: 3.9
- build:
-  commands:
-   - sam build
-   - export BUCKET=abhinandan-ci-lambda-001
-   - export TEMPLATE=template.yml
-   - export TEMPLATE_FILE_NAME=output_template_stag.yml
-   - sam package --template-file $TEMPLATE --s3-bucket $BUCKET --output-template-file $TEMPLATE_FILE_NAME
+  build:
+    commands:
+      - echo "Changing into source directory $CODEBUILD_SRC_DIR"
+      - cd $CODEBUILD_SRC_DIR
+      - echo "Installing dependencies into src file"
+      - pip install -t /cfn-ci-to-lambda -r requirements.txt
+      - echo "Packaging cloudformation template"
+      - aws cloudformation package --template-file cfn.yaml --s3-bucket $S3_BUCKET \
+                --s3-prefix $S3_BUILDS_PREFIX --output-template-file $TEMPLATE_FILE_NAME
 artifacts:
- # type: zip
- files:
-  - $TEMPLATE
-  - $TEMPLATE_FILE_NAME
+  files:
+    - '$TEMPLATE_FILE_NAME'
+    - '*config.json'
+  discard-paths: yes
+  
