--- a/cfn.yaml
+++ b/cfn.yaml
@@ -38,7 +38,7 @@ Resources:
     Properties:
       FunctionName: "cfn-to-ci-lambda"
       Description: "Lambda example"
-      Code: ./cfn-ci-to-lambda/
+      Code: ./src/
       Handler: lambda.handler
       Runtime: python3.9
       Timeout: 900
