--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,7 +6,7 @@ phases:
       - echo "Changing into source directory $CODEBUILD_SRC_DIR"
       - cd $CODEBUILD_SRC_DIR
       - echo "Installing dependencies into src file"
-      - pip install -t /cfn-ci-to-lambda -r requirements.txt
+      - pip install -t /src -r requirements.txt
       - echo "Packaging cloudformation template"
       - aws cloudformation package --template-file cfn.yaml --s3-bucket $S3_BUCKET --output-template-file $TEMPLATE_FILE_NAME
 artifacts:
