--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,7 +8,7 @@ phases:
       - echo "Installing dependencies into src file"
       - pip install -t /cfn-ci-to-lambda -r requirements.txt
       - echo "Packaging cloudformation template"
-      - aws cloudformation package --template-file cfn.yaml --s3-bucket $S3_BUCKET \ --output-template-file $TEMPLATE_FILE_NAME
+      - aws cloudformation package --template-file cfn.yaml --s3-bucket $S3_BUCKET --output-template-file $TEMPLATE_FILE_NAME
 artifacts:
   files:
     - '$TEMPLATE_FILE_NAME'
